Calculator supports graphs and molecules

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -649,6 +649,7 @@ list(APPEND TESTS_WITH_BASELINES
   3DWidgetInCustomFilter.xml
   CalcParens.xml
   Calculator.xml
+  CalculatorInput.xml
   ChangeGlyphRepVisibility.xml
   ChangingTimestepsInStateFiles.xml
   ChartAxisRangeAndLabels.xml
