Add property group widget for molecule representation
expose some mapper parameters:
 - atoms/bonds visiblity,
 - radius values/scale/type

presets are also available from proxy

--- a/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
@@ -50,6 +50,7 @@ set (Module_SRCS
   vtkSMLightProxy.cxx
   vtkSMMaterialDomain.cxx
   vtkSMMaterialLibraryProxy.cxx
+  vtkSMPVMoleculeRepresentationProxy.cxx
   vtkSMMultiSliceViewProxy.cxx
   vtkSMNewWidgetRepresentationProxy.cxx
   vtkSMOrthographicSliceViewProxy.cxx
