Avoid resetting array lists when arrays disappear
UI for showing array selection (in a combo-box) did not accomodate
for cases where the property value was set to something not present in
the domain. Fixed that.

We now have a new `pqArraySelectorPropertyWidget` which handles properties
with vtkSMArrayListDomain that should be controlled by a combo-box. This
new class replaces `pqFieldSelectionAdaptor` which has now been removed.

Fixes BUG #18371, #18621.

Updating `Calculator` test to include a check for the fix in this commit.

--- a/Qt/Components/CMakeLists.txt
+++ b/Qt/Components/CMakeLists.txt
@@ -47,6 +47,8 @@ set (Module_SRCS
   pqArrayListDomain.h
   pqArraySelectionWidget.cxx
   pqArraySelectionWidget.h
+  pqArraySelectorPropertyWidget.cxx
+  pqArraySelectorPropertyWidget.h
   pqArrayStatusPropertyWidget.cxx
   pqArrayStatusPropertyWidget.h
   pqFavoritesDialog.cxx
@@ -113,8 +115,6 @@ set (Module_SRCS
   pqDockWindowInterface.h
   pqDoubleVectorPropertyWidget.cxx
   pqDoubleVectorPropertyWidget.h
-  pqFieldSelectionAdaptor.cxx
-  pqFieldSelectionAdaptor.h
   pqFileChooserWidget.cxx
   pqFileChooserWidget.h
   pqFindDataCreateSelectionFrame.cxx
@@ -337,6 +337,7 @@ set (Module_MOC_HDRS
   pqAnimationViewWidget.h
   pqArrayListDomain.h
   pqArraySelectionWidget.h
+  pqArraySelectorPropertyWidget.h
   pqArrayStatusPropertyWidget.h
   pqFavoritesDialog.h
   pqFavoritesTreeWidget.h
@@ -366,7 +367,6 @@ set (Module_MOC_HDRS
   pqDisplayPanelPropertyWidget.h
   pqDisplayRepresentationWidget.h
   pqDoubleVectorPropertyWidget.h
-  pqFieldSelectionAdaptor.h
   pqFileChooserWidget.h
   pqFindDataCreateSelectionFrame.h
   pqFindDataCurrentSelectionFrame.h
