Turn off HyperTreeGrid-related tests and example for now
Disable these items until ParaView can be updated for the new
HyperTreeGrid implementation.

--- a/Catalyst/Editions/Rendering-Base/manifest.json
+++ b/Catalyst/Editions/Rendering-Base/manifest.json
@@ -344,6 +344,7 @@
         { "path": "vtkGPUInfoListArray.h" },
         { "path": "vtkRenderingCoreEnums.h" },
         { "path": "vtkTDxMotionEventInfo.h" },
+        { "class": "vtkAbstractHyperTreeGridMapper" },
         { "class": "vtkAbstractMapper" },
         { "class": "vtkAbstractMapper3D" },
         { "class": "vtkAbstractPicker" },
