ProcessXML: update to the new module system

--- a/Utilities/ProcessXML/CMakeLists.txt
+++ b/Utilities/ProcessXML/CMakeLists.txt
@@ -28,24 +28,6 @@
 #  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 #==========================================================================
-vtk_module_impl()
-vtk_module_export("")
-
-include(vtkForwardingExecutable)
-if (NOT PARAVIEW_COMPILE_TOOLS_IMPORTED)
-  add_executable(kwProcessXML ProcessXML.cxx)
-  target_link_libraries(kwProcessXML vtkCommonCore vtksys)
-
-  if (UNIX)
-    # setup install rpath correctly so that kwProcessXML can file needed libraries
-    # at runtime.
-    set (_temp_prefix "/example-prefix")
-    set (_bin "${_temp_prefix}/${VTK_INSTALL_RUNTIME_DIR}")
-    set (_so "${_temp_prefix}/${VTK_INSTALL_LIBRARY_DIR}")
-    file (RELATIVE_PATH relative_path "${_bin}" "${_so}")
-    set_target_properties(kwProcessXML PROPERTIES
-      INSTALL_RPATH "\$ORIGIN/${relative_path}")
-  endif()
-
-  vtk_compile_tools_target(kwProcessXML)
-endif()
+if (NOT TARGET ParaView::ProcessXML)
+  vtk_module_add_executable(ParaView::ProcessXML ProcessXML.cxx)
+endif ()
