--- a/ParaViewCore/Common/Testing/Cxx/CMakeLists.txt
+++ b/ParaViewCore/Common/Testing/Cxx/CMakeLists.txt
@@ -1,12 +1,5 @@
-include(ParaViewTestingMacros)
-# Download all top-level baselines here.
-paraview_test_load_baselines_dirs(""
-  "/"
-  TestCTHFragmentConnect
-  )
-
-paraview_add_test_cxx(${vtk-module}CxxTests tests
+vtk_add_test_cxx(vtkPVCommonCxxTests tests
   NO_DATA NO_VALID NO_OUTPUT
   ParaViewCoreCommonPrintSelf.cxx
   )
-vtk_test_cxx_executable(${vtk-module}CxxTests tests)
+vtk_test_cxx_executable(vtkPVCommonCxxTests tests)
