--- a/CoProcessing/Catalyst/Testing/Cxx/CMakeLists.txt
+++ b/CoProcessing/Catalyst/Testing/Cxx/CMakeLists.txt
@@ -1,40 +1,29 @@
-include(ParaViewTestingMacros)
-
-paraview_test_load_data(""
-  bluntfin.vts
-  cow.vtp
-  cth.vtr
-  )
-
-
-paraview_add_test_cxx(${vtk-module}CxxTests tests
+vtk_add_test_cxx(vtkPVCatalystCxxTests tests
   NO_DATA NO_VALID NO_OUTPUT
   SimpleDriver.cxx
   SimpleDriver2.cxx
   AdaptorDriver.cxx
   )
 
-paraview_add_test_cxx(${vtk-module}CxxTests tests
+vtk_add_test_cxx(vtkPVCatalystCxxTests tests
   NO_VALID
   CPXMLPWriterPipeline.cxx
   )
 # the CoProcessingTestOutputs needs to be run with ${MPIEXEC} if
 # the executable was built with MPI because certain machines only
 # allow running MPI programs with the proper ${MPIEXEC}
-if (NOT PARAVIEW_USE_MPI)
-  vtk_add_test_cxx(${vtk-module}CxxTests extra_tests
-    NO_DATA NO_VALID NO_OUTPUT
-    CoProcessingTestOutputs.cxx)
-  list(APPEND tests
-    ${extra_tests})
-else()
-  paraview_add_test_mpi(${vtk-module}Cxx-MPI mpi_tests
+if (PARAVIEW_USE_MPI)
+  vtk_add_test_mpi(vtkPVCatalystCxx-MPI mpi_tests
     NO_DATA NO_VALID NO_OUTPUT
     CoProcessingTestOutputs.cxx
     SubController.cxx
     )
-  vtk_test_mpi_executable(${vtk-module}Cxx-MPI mpi_tests)
-endif()
+  vtk_test_cxx_executable(vtkPVCatalystCxx-MPI mpi_tests)
+else ()
+  vtk_add_test_cxx(vtkPVCatalystCxxTests tests
+    NO_DATA NO_VALID NO_OUTPUT
+    CoProcessingTestOutputs.cxx)
+endif ()
 
-vtk_test_cxx_executable(${vtk-module}CxxTests tests
+vtk_test_cxx_executable(vtkPVCatalystCxxTests tests
   vtkCustomUnstructuredGridBuilder.cxx)
